{
    "version": 1,
    "name": "CursorActions",
    "maps": [
        {
            "name": "CursorMaps",
            "id": "b195e6d8-b436-484b-a3c7-cd7c5d2b9744",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "3e371076-0096-46cd-88e3-d43de6579556",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "bbdbebfa-5cd3-4849-9b66-b48691844f73",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleClick",
                    "type": "Button",
                    "id": "0fdd4545-5bd3-4865-9c3b-5dd7c12bb55c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenPosition",
                    "type": "Value",
                    "id": "fb6c63ad-b7fb-40a7-9f35-b6bda8fa16e9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScreenDelta",
                    "type": "Value",
                    "id": "e3cc3909-d9fc-4cd6-8dfd-c0977aa3b306",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f38d60e6-e63e-43e8-951e-c11a80908980",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2bae19f7-0d09-4b14-a2fb-e3542e838bb4",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d188af9e-abdb-40f5-9cc8-eebf7e99cb94",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce4c0f73-65c4-4468-b0b4-d9f182519440",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScreenDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62a9594f-6687-4fc4-8136-6febd1e28f52",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}